--- a/FreezingGoatsProject/Assembly-CSharp.csproj
+++ b/FreezingGoatsProject/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GoatController.cs" />
+    <Compile Include="Assets\Scripts\InteractionController.cs" />
     <Compile Include="Assets\Scripts\MovementController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/Kjell/Desktop/aDesktopCrap/GameDevelopment/Goats/FreezingGoats/FreezingGoatsProject/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
