--- a/FreezingGoatsProject/Assembly-CSharp.csproj
+++ b/FreezingGoatsProject/Assembly-CSharp.csproj
@@ -61,8 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GoatController.cs" />
+    <Compile Include="Assets\Scripts\InputController.cs" />
     <Compile Include="Assets\Scripts\InteractionController.cs" />
-    <Compile Include="Assets\Scripts\MovementController.cs" />
+    <Compile Include="Assets\Scripts\PositionWrapper.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/Kjell/Desktop/aDesktopCrap/GameDevelopment/Goats/FreezingGoats/FreezingGoatsProject/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
